hphp/test/slow/anon_class/invalid_class_name.hhas.expectf
Fatal error: Assembler Error: line 6: anonymous class and closure names may not contain ids in hhas in %s/invalid_class_name.hhas on line -1
